<resources>
    <string name="app_name">Sticky Notification Reminders</string>
    <string name="font_open_sans_bold">OpenSans-Bold</string>
    <string name="font_open_sans_regular">OpenSans-Regular</string>
    <string name="new_notification">New Notification</string>
    <string name="setttings_icon">Settings Icon</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="make_it_sticky">Make it sticky</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="error_enter_title">Please enter title</string>
    <string name="error_enter_description">Please enter description</string>
    <string name="please_choose_priority">Please choose priority</string>
    <string name="edit_notification">Edit Notification</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="make_notification_public">Make notification public</string>
    <string name="information">Information</string>
    <string name="ok">OK</string>
    <string name="make_it_sticky_description">Sticky notifications can\'t be deleted even when you swipe on notification bar or clear all notifications. Only way to delete this notification is to tap on the notification and press \"Delete\" button.</string>
    <string name="make_notification_public_description">Public notifications will always be displayed on the notification bar, even when you have \"Hide sensitive notification content\" ON.</string>

    <string-array name="priority_name">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>

    <integer-array name="priority_value">
        <item>-2</item>
        <item>1</item>
        <item>2</item>
    </integer-array>
</resources>
