<?xml version="1.0" encoding="utf-8"?><!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/transparent"
    tools:context="com.itcse.sticky_notifications.HomeActivity">-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_margin="20dp"
    android:background="@color/white"
    android:padding="20dp">

    <com.itcse.sticky_notifications.custom_views.CustomTextView
        android:id="@+id/tvHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:ellipsize="end"
        android:maxLines="1"
        android:paddingTop="10dp"
        android:text="@string/new_notification"
        android:textSize="18sp"
        app:fontName="@string/font_open_sans_bold" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvHeading"
        android:layout_marginTop="10dp">

        <com.itcse.sticky_notifications.custom_views.CustomEditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:singleLine="true"
            app:fontName="@string/font_open_sans_regular" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tilTitle"
        android:layout_marginTop="10dp">

        <com.itcse.sticky_notifications.custom_views.CustomEditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:inputType="textCapSentences"
            android:singleLine="true"
            app:fontName="@string/font_open_sans_regular" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/spSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tilDescription"
        android:layout_marginTop="10dp" />

    <com.itcse.sticky_notifications.custom_views.CustomCheckBox
        android:id="@+id/cbSticky"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spSpinner"
        android:layout_marginTop="10dp"
        android:text="@string/make_it_sticky"
        app:fontName="@string/font_open_sans_regular" />

    <ImageView
        android:id="@+id/ivStickyInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:src="@drawable/ic_help_black"
        android:layout_toEndOf="@+id/cbSticky"
        android:layout_alignBottom="@+id/cbSticky"/>

    <com.itcse.sticky_notifications.custom_views.CustomCheckBox
        android:id="@+id/cbPublicNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cbSticky"
        android:layout_marginTop="10dp"
        android:text="@string/make_notification_public"
        app:fontName="@string/font_open_sans_regular" />

    <ImageView
        android:id="@+id/ivStickyPublic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:src="@drawable/ic_help_black"
        android:layout_toEndOf="@+id/cbPublicNotification"
        android:layout_alignBottom="@+id/cbPublicNotification"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/bCancel"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cbPublicNotification"
        android:layout_toStartOf="@+id/bCreate"
        android:text="@string/cancel" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/bCreate"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/cbPublicNotification"
        android:text="@string/create" />
</RelativeLayout><!--</RelativeLayout>-->
